--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -472,6 +472,11 @@
   </svg>
 
 </div>
+<app-header></app-header>
+
+<router-outlet></router-outlet> <!-- Affichage des composants dynamiques -->
+
+<app-footer></app-footer>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
